Updates based on mural

--- a/app/views/layinghens/current/business-details.html
+++ b/app/views/layinghens/current/business-details.html
@@ -21,7 +21,7 @@
                 name: 'project-name',
                 value: data['project-name'] if data['project-name'] else '',
                 hint: {
-                    text: 'For example, Browns Hill Farm robotic milking'
+                    text: 'For example, Browns Hill Farm laying hens housing'
                 },
                 label: {
                     text: 'Project name'
