--- a/app/views/layinghens/current/eligibility/building/elim-housing-density.html
+++ b/app/views/layinghens/current/eligibility/building/elim-housing-density.html
@@ -19,10 +19,10 @@
                 </p>
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        20kg per m2 of the total usable area
+                        20kg per m<sup>2</sup> of the total usable area
                     </li>
                     <li>
-                        33kg per m2 of the total usable area at floor level
+                        33kg per m<sup>2</sup> of the total usable area at floor level
                     </li>
                 </ul>
 
