--- a/app/views/layinghens/current/eligibility/lighting/features.html
+++ b/app/views/layinghens/current/eligibility/lighting/features.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the {{ poultryType }} house lighting system have these features?
+    Will the housing’s lighting system have these features?
 {% endblock %} 
 
 {% block content %}
@@ -48,7 +48,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the ' + poultryType + ' house lighting system have these features?',
+                            text: 'Will the housing’s lighting system have these features?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
