--- a/app/views/layinghens/current/farmer-type.html
+++ b/app/views/layinghens/current/farmer-type.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
-  Farmer Type – {{ serviceName }} – GOV.UK Prototype Kit
+  What type of farmer are you?
 {% endblock %}
 
 {% block beforeContent %}
