--- a/app/views/layinghens/current/start.html
+++ b/app/views/layinghens/current/start.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
-  Start page template – {{ serviceName }} – GOV.UK Prototype Kit
+  {{ serviceName }}
 {% endblock %}
 
 {% block header %}
