--- a/app/views/layinghens/current/tenancy.html
+++ b/app/views/layinghens/current/tenancy.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Are your land or premises rented, leased or tenanted?
+  Is the planned project on land the business owns?
 {% endblock %}
 
 {% block beforeContent %}
