--- a/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
+++ b/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
@@ -33,7 +33,7 @@
                             the roof faces only north or is heavily shaded
                         </li>
                         <li>
-                            the roof does not have 100m2 of clear roof space
+                            the roof does not have 100m<sup>2</sup> of clear roof space
                         </li>
                     </ul>
 
