--- a/app/views/layinghens/current/scoring/environment-data.html
+++ b/app/views/layinghens/current/scoring/environment-data.html
@@ -36,7 +36,7 @@
                         }
                     },
                     hint: {
-                        text: 'This is in addition to the requirement for a control system that automatically measures and records daily temperature, humidity and CO2 levels'
+                        html: 'This is in addition to the requirement for a control system that automatically measures and records daily temperature, humidity and CO<sub>2</sub> levels'
                     },
                     items: [
                         {
