--- a/app/views/layinghens/current/scoring/features.html
+++ b/app/views/layinghens/current/scoring/features.html
@@ -85,7 +85,7 @@
                 <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    RPA want to fund projects that use renewable energy.
+                    RPA want to fund projects that use pollution mitigation practices.
                 </p>
             </div>
 
