--- a/app/views/layinghens/current/hen-ventilation-features.html
+++ b/app/views/layinghens/current/hen-ventilation-features.html
@@ -43,7 +43,7 @@
             <p class="govuk-hint"> The ventilation must have:</p>
             
             <ul class="govuk-list govuk-list--bullet">
-              <li class="govuk-hint">a control system to automatically measure and record the daily temperature, humidity, and CO2 levels</li>
+              <li class="govuk-hint">a control system to automatically measure and record the daily temperature, humidity, and CO<sub>2</sub> levels</li>
               <li class="govuk-hint">an alarm system (that detects excessive high or low temperatures and system failures) with a power supply independent of mains electricity</li>
               <li class="govuk-hint">an emergency power supply, for example a high-capacity generator, in case of electrical or other failures</li>
              </ul>
