--- a/app/views/layinghens/current/legal-status.html
+++ b/app/views/layinghens/current/legal-status.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   What is the legal status of the {{ data['farming-type'] }} business?
