--- a/app/views/layinghens/current/project-responsibility.html
+++ b/app/views/layinghens/current/project-responsibility.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
 Will you take full responsibility for your project?
