--- a/app/views/layinghens/current/templates/checkbox-disable.html
+++ b/app/views/layinghens/current/templates/checkbox-disable.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Which items eligible for grant funding are included in the project?
