--- a/app/views/layinghens/current/views/layouts/GUIDANCEROBOTICS.html
+++ b/app/views/layinghens/current/views/layouts/GUIDANCEROBOTICS.html
@@ -1,6 +1,6 @@
 {% set tocPage = true %}
 
-{% extends "layout.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block head %}
 
