--- a/app/views/layinghens/current/views/layouts/_BASE.html
+++ b/app/views/layinghens/current/views/layouts/_BASE.html
@@ -1,6 +1,6 @@
 {% set serviceName = "Apply for a productivity grant" %}
 
-{% extends "layout.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 <!-- add elements that we want consistently across the service -->
 
