--- a/app/views/layinghens/current/views/layouts/layout_unbranded.html
+++ b/app/views/layinghens/current/views/layouts/layout_unbranded.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block headIcons %}
   <link rel="shortcut icon" href="{{ asset_path }}images/unbranded.ico?0.18.3" type="image/x-icon" />
