--- a/app/views/layinghens/current/applying.html
+++ b/app/views/layinghens/current/applying.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Who is applying for this grant?
