--- a/app/views/layinghens/current/kickout-hen-veranda-biosecurity.html
+++ b/app/views/layinghens/current/kickout-hen-veranda-biosecurity.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   You cannot apply for a grant from this scheme
