--- a/app/views/layinghens/current/planning-permission.html
+++ b/app/views/layinghens/current/planning-permission.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Does the project need planning permission?
