--- a/app/views/layinghens/current/templates/start-with-step-by-step.html
+++ b/app/views/layinghens/current/templates/start-with-step-by-step.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block pageTitle %} Start page example {% endblock %} {% block header %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %} {% block pageTitle %} Start page example {% endblock %} {% block header %}
 <!-- Blank header with no service name for the start page -->
 {{ govukHeader() }} {% endblock %} {% block pageScripts %}
 <script src="/public/javascripts/step-by-step-nav.js"></script>
