--- a/app/views/layinghens/current/tenancy.html
+++ b/app/views/layinghens/current/tenancy.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends 'layinghens/current/views/layouts/layout-old.html' %}
 
 {% block pageTitle %}
   Is the planned project on land the business owns?
