added filter for lists

--- a/app/views/layinghens/user-testing/likert-scale.html
+++ b/app/views/layinghens/user-testing/likert-scale.html
@@ -192,15 +192,27 @@
 
             <ul class="govuk-list">
                 <li>
-                <a href="/layinghens/current/start">
-                Start page
-                </a>
+                    <a href="/layinghens/current/start">
+                        Start page
+                    </a>
                 </li>
 
                 <li>
-                <a href="/layinghens/current/poultry-type">
-                Choose type of project
-                </a>
+                    <a href="/layinghens/current/poultry-type">
+                        Choose type of project
+                    </a>
+                </li>
+
+                <li>
+                    <a href="/layinghens/current/scoring/current-system?poultry-type=hen">
+                        Scoring (hens)
+                    </a>
+                </li>
+
+                <li>
+                    <a href="/layinghens/current/scoring/current-system?poultry-type=pullet">
+                        Scoring (pullets)
+                    </a>
                 </li>
 
             </ul>
