--- a/app/views/layinghens/current/eligibility/solar/potential-funding.html
+++ b/app/views/layinghens/current/eligibility/solar/potential-funding.html
@@ -19,6 +19,12 @@
 
                 <h1 class="govuk-heading-l">Potential grant funding</h1>
 
+                {% if grantAmount == 500000 %}
+                    <p>
+                        The maximum grant you can apply for is £500,000.
+                    </p>
+                {% endif %}
+
                 <p>
                     You may be able to apply for a grant of up to {{ grantAmount | inPounds }}, based on the estimated cost of {{ data['cost'] | float | inPounds }}.
                 </p>
