Added scoring thing

--- a/app/views/layinghens/current/eligibility/solar/remaining-cost.html
+++ b/app/views/layinghens/current/eligibility/solar/remaining-cost.html
@@ -51,7 +51,7 @@
                     ]
                 }) }}
 
-                
+                <input type="hidden" name="from-scoring" value="false">
 
                 {{ govukButton ({
                     html: 'Continue'
