--- a/app/views/layinghens/current/scoring/current-system.html
+++ b/app/views/layinghens/current/scoring/current-system.html
@@ -15,7 +15,11 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form action="ramps">
+            {% if data['from-scoring'] == 'true' %}
+                <form action="results">
+            {% else %}
+                <form action="ramps">
+            {% endif %}
 
                 {{ govukRadios ({
                     idPrefix: 'scoring-system',
