--- a/app/views/layinghens/current/project-type.html
+++ b/app/views/layinghens/current/project-type.html
@@ -24,7 +24,7 @@
                     </p>
 
                     <p class="govuk-hint">
-                        If you want to apply for multiple veranda projects you must submit separate applications for each project.
+                        If you want to apply for multiple veranda projects you must submit an application for each project.
                     </p>
 
                 {% endset %}
@@ -67,7 +67,7 @@
                                 text: 'The RPA will award the grant funding for adding a veranda only to existing housing on a first-come first-served basis'
                             },
                             attributes: {
-                                'data-next': 'business-details'
+                                'data-next': 'eligibility/veranda/veranda-only'
                             }
                         },
                         {
